[metadata]
name = pylode
version = attr: pylode.__version__
description = Python Implementation of LODE
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0 License
license_files = LICENSE
url = https://github.com/ceriottm/lode
author = attr: pylode.__author__

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

keywords =
    LODE
    ML

python_requires = >=3.6

project_urls =
    Bug Reports = https://github.com/ceriottm/lode/issues
    Source = https://github.com/ceriottm/lode

[options]
package_dir=
    =src
packages = find:

install_requires =
    ase
    numpy
    scipy

[options.packages.find]
where=src

[options.extras_require]
progressbar =
    tqdm
test =
    nbval
    pytest

[options.entry_points]
console_scripts =
    pylode = pylode.utilities.precompute_lode:main

[bdist_wheel]
universal=1
